k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: motd-service
spec:
  type: ClusterIP
  selector:
    app: motd-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
